<resources>
    <string name="app_name">eParking App</string>
    <string name="title_activity_maps">Map</string>


    <!--Settings Activity -->
    <string-array name="lists">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
    </string-array>
    <string name="btn_voice_text">Click here</string>

    <string name="settings">Settings</string>

    <!--Home Activity-->
    <string name="book_a_slot">Book A Slot</string>
    <string name="make_a_new_booking">Make a new booking</string>
    <string name="change_your_settings">Change your settings</string>
    <string name="check_your_calender">Check your calender</string>
    <string name="all_your_bookings">All your bookings</string>
    <string name="my_bookings">My Bookings</string>
    <string name="all_account_activities">All account activities</string>
    <string name="calender">Calender</string>

    <!--Login Activity-->
    <string name="email_1">Email</string>
    <string name="password">...........</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--New Booking Activity-->
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="user_catergory">User Category</string>
    <string name="slot_8">Slot 8</string>
    <string name="slot_7">Slot 7</string>
    <string name="slot_6">Slot 6</string>
    <string name="slot_1">Slot 1</string>
    <string name="slot_5">Slot 5</string>
    <string name="slot_4">Slot 4</string>
    <string name="slot_9">Slot 9</string>
    <string name="slot_3">Slot 3</string>
    <string name="slot_2">Slot 2</string>
    <string name="available_slots">Available Slots</string>
    <string name="pending">Pending</string>
    <string name="status">Status</string>
    <string name="select_slot">Select Slot</string>
    <string name="select_department">Select Department</string>
    <string name="submit_booking">Submit Booking</string>


    <!--All the titles for all activities-->

    <string name="login_title"><font size="12">Login</font> </string>
    <string name="register_title"><font size="12">Sign Up</font> </string>
    <string name="home_title"><font size="12">Home</font> </string>
    <string name="myaccount_title"><font size="12">My Account</font> </string>
    <string name="forgotpassword_title"><font size="12">Forgot Password</font> </string>
    <string name="mybookings_title"><font size="12">My Bookings</font> </string>
    <string name="calendar_title"><font size="12">Calendar</font> </string>
    <string name="settings_title"><font size="12">Settings</font> </string>
    <string name="maps_title"><font size="12">Maps</font> </string>
    <string name="updateprofile_title"><font size="12">Update Profile</font></string>
    <string name="newbooking_title"><font size="12">Book A Slot</font> </string>
    <string name="chat_title"><font size="12">Chat</font> </string>
    <string name="my_account">My Account</string>


    <!--Bookings Activity-->
    <string name="bookingemail">Email: </string>
    <string name="booking_action">Action</string>
    <string name="bookingdepartment">Department: </string>
    <string name="bookingslotno">Slot No: </string>
    <string name="sinoyolo_wopula">Sinoyolo Wopula</string>
    <string name="bookingdate">Date</string>
    <string name="bookingiid">BookingId: </string>
    <string name="_124hdvgd56">124hdvgd56</string>
    <string name="sinoyolo_gmail_com">sinoyolo@gmail.com</string>
    <string name="computer_science">Computer Science</string>
    <string name="bookingslot_1">Slot 1</string>
    <string name="_10_08_2018">10/08/2018</string>
    <string name="_10_00">10:00</string>

    <!--Register Activity-->
    <string name="register_first_name">First Name</string>
    <string name="register_gender">Gender</string>
    <string name="register_phone">Phone</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_sign_up">Sign up</string>
    <string name="register_already_registered">Already registered?</string>
    <string name="slot_10">Slot 10</string>

    <string name="gender">Male</string>
    <string name="gender_title">Gender</string>
    <string name="department_title">Password</string>
    <string name="computer_science_1">Computer Science</string>
    <string name="_2773_5602523">+2773 5602523</string>
    <string name="phone_1">Phone</string>
    <string name="email_2">Email</string>
    <string name="mlulekisinqadu_gmail_com">mlulekisinqadu@gmail.com</string>
    <string name="bryan_sinqadu">Bryan Sinqadu</string>
    <string name="message_title">Message Title</string>
    <string name="message_content">Helo Sinoyolo we are looking for the a n assistant msnsger in our company whom we will trust because we see that you re are more qualified for this job. Thank you. Staff Team</string>
    <string name="message_date">16 August 2018 12:13</string>

    <!--AbstractChat Activity-->

    <string name="send">Send</string>
    <string name="hint_message">Say something…</string>
    <string name="start_chatting">No messages. Start chatting at the bottom!</string>
    <string name="signing_in">Signing in…</string>

    <string name="signed_in">Signed In</string>
    <string name="anonymous_auth_failed_msg">
        Anonymous authentication failed, various components of the demo will not work.
        Make sure your device is online and that Anonymous Auth is configured in your Firebase project
        (https://console.firebase.google.com/project/_/authentication/providers)
    </string>

    <!--Api AI-->

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="calender_title">Calendar</string>
    <string name="messages_title">Messages</string>
    <string name="notifications_title">Notifications</string>
    <string name="my_account_title">My Account</string>
    <string name="edit_profile_title">Edit Profile</string>


</resources>
