<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pacific_dream"
    android:orientation="vertical"
    tools:context="com.bryansinqadu.eparking_app.NewBookingActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/edittext_theme"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/edit_profile"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_theme"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/email_black"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_theme"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/cellphone"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/etUserCategory"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:drawableStart="@drawable/usercatergory"
            android:background="@drawable/edittext_theme"
            android:drawablePadding="12dp"
            android:paddingStart="10dp"
            android:layout_marginTop="4dp"
            android:editable="false"
            android:ems="10"
            android:textSize="16sp"
            android:hint="@string/user_catergory"
            android:inputType="none"
            tools:ignore="RtlSymmetry" />

        <GridLayout
            android:layout_width="377dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:background="@drawable/edittext_theme"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/date"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="none"
                android:editable="false"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry,TextFields" />

            <EditText
                android:id="@+id/etTime"
                android:layout_width="159dp"
                android:layout_height="36dp"
                android:layout_column="2"
                android:layout_row="0"
                android:background="@drawable/edittext_theme"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/time"
                android:editable="false"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </GridLayout>

        <EditText
            android:id="@+id/etDepartment"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/edittext_theme"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/department"
            android:ems="10"
            android:editable="false"
            android:hint="@string/select_department"
            android:inputType="none"
            android:paddingStart="10dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/textviewslot"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_theme"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/slot"
            android:ems="10"
            android:editable="false"
            android:hint="@string/select_slot"
            android:inputType="none"
            android:paddingStart="10dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bkgd_transparent1"
            android:text="@string/submit_booking"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>
