<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pacific_dream"
    tools:context="com.bryansinqadu.eparking_app.ChatActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/start_chatting" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/messagesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/footer"
        android:clipToPadding="false"
        android:layout_marginTop="55dp"
        android:padding="16dp"
        tools:listitem="@layout/message"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <EditText
            android:id="@+id/messageEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_message"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/sendButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/send" />

    </LinearLayout>

</RelativeLayout>